# pz-recorder-dll

./: .gitignore  README.md
RecorderApp/: RecorderApp.sln
RecorderApp/Recorder.Model/: IRecordingManager.cs  KinectV2.cs  PointCloudRecorderState.cs  RecordingManager.cs  Structs.cs
RecorderApp/Recorder.ModelTests/: Program.cs
RecorderApp/RecorderApp/: RecorderApp.cpp  RecorderApp.vcxproj  RecorderApp.vcxproj.filters
RecorderApp/RecorderModel/: KinectV2.cs
RecorderApp/Tests/: Program.cs  Tests.csproj
RecorderDll/: .gitignore  CMake Solution Build.cmd  CMakeLists.txt  Delete Solution Files.cmd  README_budownanie-i-używanie.md  README_budownanie-w-cmake.md  Solution-CMake-Build.cmd  Solution-Delete-Files.cmd  kinectv1-settings.vrfilm  kinectv2-settings.vrfilm  settings.vrfilm
RecorderDll/source/: ICloudRecorder.h  IRecordingManager.h  KinectV2_Tests.h  README.md  RecorderState.h  RecordingManager.cpp  RecordingManager.h  additionals.h  functions.cpp  functions.h  kinect2.cpp  kinect2.h  main.cpp  main_Tests.h
RecorderDll/source/API/: DllApi.cpp  DllApi.h  RecordingManagerAPI.cpp  RecordingManagerAPI.h
RecorderDll/source/DllApi/: DllApi.cpp  DllApi.h
RecorderDll/source/KinectV1/: KinectV1.cpp  KinectV1.h  KinectV1Grabber.cpp  KinectV1Grabber.h  PluginPCL.cpp  PluginPCL.h  kinect_v1.h
RecorderDll/source/KinectV2/: KinectV2.cpp  KinectV2.h  KinectV2Grabber.cpp  KinectV2Grabber.h  kinect2_grabber.cpp  kinect2_grabber.h  kinect_v2.cpp  kinect_v2.h
RecorderDll/source/RecordingManager/: IRecordingManager.h  RecordingManager.cpp  RecordingManager.h
RecorderDllTests/: README.md
RecorderDllTests/Recorder.Model/: IRecordingManager.cs  RecordingManager.cs  Structs.cs
RecorderDllTests/Recorder.ModelTests/: Program.cs  Recorder.ModelTests.csproj
